fixed spacing on social icons

--- a/themes/holycupcakes/style.css
+++ b/themes/holycupcakes/style.css
@@ -121,13 +121,15 @@ body {
     text-decoration: underline;
 }
 
-#footer-sidebar p {
+#footer-sidebar  {
     margin: 0;
     text-align: left;
 }
 .social-media img{
-    width: 30px;
+    width: 20px;
+    margin-right: 15px;
 }
+
 /* ***************************** For Footer Side Bar 1 ***************************** */
 #footer-sidebar1 {
     margin-bottom: 2vh;
